--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "express": "^5.1.0",
     "firebase": "^12.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
     "sass": "^1.89.2"
